--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <a href="#" class="header__lang-link">En</a>
       </div>
     </section>
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+
+    </section>
   </div>
 </body>
 
