--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
       <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
 
     </section>
+    <section class="intro">
+      <h2 class="intro__title"></h2>
+      <p class="intro__description"></p>
+      <ul class="intro__list">
+        <li class="intro__list-item"></li>
+        <li class="intro__list-item"></li>
+        <li class="intro__list-item"></li>
+        <li class="intro__list-item"></li>
+        <li class="intro__list-item"></li>
+      </ul>
+    </section>
   </div>
 </body>
 
