--- a/index.html
+++ b/index.html
@@ -46,14 +46,20 @@
 
     </section>
     <section class="intro">
-      <h2 class="intro__title"></h2>
-      <p class="intro__description"></p>
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__description">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+        провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная
+        с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
+        без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+        мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+        стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li class="intro__list-item"></li>
-        <li class="intro__list-item"></li>
-        <li class="intro__list-item"></li>
-        <li class="intro__list-item"></li>
-        <li class="intro__list-item"></li>
+        <li class="intro__list-item"><span>Часовых поясов</span> 11</li>
+        <li class="intro__list-item"><span>Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list-item"><span>Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list-item"><span>Природных заповедников</span> 105</li>
+        <li class="intro__list-item"><span>Аэропортов</span> 241
+        </li>
       </ul>
     </section>
   </div>
