--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-
     </section>
+
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__description">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -61,6 +61,23 @@
         <li class="intro__list-item"><span>Аэропортов</span> 241
         </li>
       </ul>
+    </section>
+
+    <section class="gallery">
+      <div class="gallery__grid-container">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+        <img src="" alt="" class="gallery__item">
+      </div>
     </section>
   </div>
 </body>
