--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
     </section>
-
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__description">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -62,21 +61,20 @@
         </li>
       </ul>
     </section>
-
     <section class="gallery">
       <div class="gallery__grid-container">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
-        <img src="" alt="" class="gallery__item">
+        <img src="images/gallery/__item1.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item2.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item3.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item4.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item5.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item6.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item7.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item8.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item9.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item10.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item11.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item12.png" alt="" class="gallery__item">
       </div>
     </section>
   </div>
