Добавлена файловая структура для places

--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
         <img src="images/gallery/__item12.png" alt="" class="gallery__item">
       </div>
     </section>
+    <section class="places">
+      <div class="places__grid-container">
+        <div class="places__item">
+          <h2></h2>
+          <img src="" alt="">
+          <a href=""></a>
+          <p></p>
+        </div>
+        <div class="places__item"></div>
+        <div class="places__item"></div>
+        <div class="places__item"></div>
+        <div class="places__item"></div>
+      </div>
+    </section>
   </div>
 </body>
 
