--- a/index.html
+++ b/index.html
@@ -76,40 +76,82 @@
       <img src="images/gallery/__item12.png" alt="" class="gallery__item">
     </div>
   </section>
-  <!--<section class="places">
-    <div class="places__grid-container">
-      <div class="places__item">
-        <h2>Куршская коса</h2>
-        <a href="#">park-kosa.ru</a>
-        <img src="images/places/kosa.png" alt="">
-        <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
+  <section class="places">
+    <div class="places__item">
+      <h2 class="places__title">Куршская коса</h2>
+      <div class="places__link"><span>URL<br></span><a href="#">park-kosa.ru</a></div>
+      <img class="places__image" src="images/places/kosa.png" alt="">
+      <div class="places__text">
+        <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+          спокойного Куршского
           залива
           с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-          российского анклава.
-          На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по
+          российского анклава.</p>
+        <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя
+          там же по
           соседству
           —
           самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
           Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
         </p>
       </div>
-      <div class="places__item">
-        <h2>Кольский</h2>
-        <a href="#">National Geographic</a>
-        <img src="images/places/kolsky.png" alt="">
+    </div>
+    <div class="places__item">
+      <h2 class="places__title">Кольский</h2>
+      <div class="places__link"><span>URL<br></span><a href="#">National Geographic</a></div>
+      <img src="images/places/kolsky.png" alt="" class="places__image">
+      <div class="places__text">
         <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-          тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
-          Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+          тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+        <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
           «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
           пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
           увидеть северное сияние начинает сбываться с билетом
           в Мурманск.</p>
       </div>
-      <div class="places__item"></div>
-      <div class="places__item"></div>
-      <div class="places__item"></div>
     </div>
-  </section>-->
+    <div class="places__item">
+      <h2 class="places__title">Алтай</h2>
+      <div class="places__link"><span>URL<br></span><a href="#">Facebook</a></div>
+      <img src="images/places/altai.png" alt="" class="places__image">
+      <div class="places__text">
+        <p>Алтай — одно из красивейших мест в России.
+          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+          озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+          воздухом.</p>
+        <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
+          знаменитые манулы — тоже обитатели Алтайского края.</p>
+      </div>
+    </div>
+    <div class="places__item">
+      <h2 class="places__title">Зимний Байкал</h2>
+      <div class="places__link"><span>URL<br></span><a href="#">https://vk.com/baikalmile</a></div>
+      <img src="images/places/baikal.png" alt="" class="places__image">
+      <div class="places__text">
+        <p>Всем известен Байкал как крупнейшее озеро
+          в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+        </p>
+        <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
+          когда лыжник привязывает себя
+          к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+          «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+      </div>
+    </div>
+    <div class="places__item">
+      <h2 class="places__title">Карелия</h2>
+      <div class="places__link"><span>URL<br></span><a href="#">http://vodlozero.ru/</a></div>
+      <img src="images/places/karelia.png" alt="" class="places__image">
+      <div class="places__text">
+        <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+          Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
+          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+          существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+          В девственном лесу на сотю километров не встретишь тропы. А на редких тропинках деревья
+          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
