--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="page">
-  <section class="header">
+  <header class="header">
     <svg class="header__logo" width="176" height="52" viewBox="0 0 176 52" fill="none"
       xmlns="http://www.w3.org/2000/svg">
       <path
@@ -38,120 +38,122 @@
       <a href="#" class="header__lang-link">Ru</a>
       <a href="#" class="header__lang-link">En</a>
     </div>
-  </section>
-  <section class="lead">
-    <h1 class="lead__title">Путешествия по России</h1>
-    <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-  </section>
-  <section class="intro">
-    <h2 class="intro__title">Чего мы там не видели?</h2>
-    <p class="intro__description">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-      провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная
-      с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
-      без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-      мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
-      стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-    <ul class="intro__list">
-      <li class="intro__list-item"><span>Часовых поясов</span> 11</li>
-      <li class="intro__list-item"><span>Объектов природного наследия ЮНЕСКО</span> 12</li>
-      <li class="intro__list-item"><span>Объектов культурного наследия ЮНЕСКО</span> 16</li>
-      <li class="intro__list-item"><span>Природных заповедников</span> 105</li>
-      <li class="intro__list-item"><span>Аэропортов</span> 241
-      </li>
-    </ul>
-  </section>
-  <section class="gallery">
-    <div class="gallery__grid-container">
-      <img src="images/gallery/__item1.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item2.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item3.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item4.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item5.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item6.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item7.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item8.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item9.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item10.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item11.png" alt="" class="gallery__item">
-      <img src="images/gallery/__item12.png" alt="" class="gallery__item">
-    </div>
-  </section>
-  <section class="places">
-    <div class="places__item">
-      <h2 class="places__title">Куршская коса</h2>
-      <div class="places__link"><span>URL<br></span><a href="#">park-kosa.ru</a></div>
-      <img class="places__image" src="images/places/kosa.png" alt="">
-      <div class="places__text">
-        <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-          спокойного Куршского
-          залива
-          с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-          российского анклава.</p>
-        <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя
-          там же по
-          соседству
-          —
-          самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
-          Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
-        </p>
+  </header>
+  <main>
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+    </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__description">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+        провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная
+        с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
+        без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+        мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+        стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li class="intro__list-item"><span>Часовых поясов</span> 11</li>
+        <li class="intro__list-item"><span>Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list-item"><span>Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list-item"><span>Природных заповедников</span> 105</li>
+        <li class="intro__list-item"><span>Аэропортов</span> 241
+        </li>
+      </ul>
+    </section>
+    <section class="gallery">
+      <div class="gallery__grid-container">
+        <img src="images/gallery/__item1.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item2.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item3.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item4.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item5.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item6.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item7.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item8.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item9.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item10.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item11.png" alt="" class="gallery__item">
+        <img src="images/gallery/__item12.png" alt="" class="gallery__item">
       </div>
-    </div>
-    <div class="places__item">
-      <h2 class="places__title">Кольский</h2>
-      <div class="places__link"><span>URL<br></span><a href="#">National Geographic</a></div>
-      <img src="images/places/kolsky.png" alt="" class="places__image">
-      <div class="places__text">
-        <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-          тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-        <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
-          «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
-          пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
-          увидеть северное сияние начинает сбываться с билетом
-          в Мурманск.</p>
+    </section>
+    <section class="places">
+      <div class="places__item">
+        <h2 class="places__title">Куршская коса</h2>
+        <div class="places__link"><span>URL<br></span><a href="#">park-kosa.ru</a></div>
+        <img class="places__image" src="images/places/kosa.png" alt="">
+        <div class="places__text">
+          <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского
+            залива
+            с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
+            российского анклава.</p>
+          <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя
+            там же по
+            соседству
+            —
+            самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
+            Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="places__item">
-      <h2 class="places__title">Алтай</h2>
-      <div class="places__link"><span>URL<br></span><a href="#">Facebook</a></div>
-      <img src="images/places/altai.png" alt="" class="places__image">
-      <div class="places__text">
-        <p>Алтай — одно из красивейших мест в России.
-          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-          озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
-          воздухом.</p>
-        <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
-          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
-          знаменитые манулы — тоже обитатели Алтайского края.</p>
+      <div class="places__item">
+        <h2 class="places__title">Кольский</h2>
+        <div class="places__link"><span>URL<br></span><a href="#">National Geographic</a></div>
+        <img src="images/places/kolsky.png" alt="" class="places__image">
+        <div class="places__text">
+          <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
+            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+            «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
+            пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
+            увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
       </div>
-    </div>
-    <div class="places__item">
-      <h2 class="places__title">Зимний Байкал</h2>
-      <div class="places__link"><span>URL<br></span><a href="#">https://vk.com/baikalmile</a></div>
-      <img src="images/places/baikal.png" alt="" class="places__image">
-      <div class="places__text">
-        <p>Всем известен Байкал как крупнейшее озеро
-          в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
-        </p>
-        <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
-          когда лыжник привязывает себя
-          к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-          «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+      <div class="places__item">
+        <h2 class="places__title">Алтай</h2>
+        <div class="places__link"><span>URL<br></span><a href="#">Facebook</a></div>
+        <img src="images/places/altai.png" alt="" class="places__image">
+        <div class="places__text">
+          <p>Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            воздухом.</p>
+          <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+            флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
+            знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
       </div>
-    </div>
-    <div class="places__item">
-      <h2 class="places__title">Карелия</h2>
-      <div class="places__link"><span>URL<br></span><a href="#">http://vodlozero.ru/</a></div>
-      <img src="images/places/karelia.png" alt="" class="places__image">
-      <div class="places__text">
-        <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
-          Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
-          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
-          существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-          В девственном лесу на сотю километров не встретишь тропы. А на редких тропинках деревья
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      <div class="places__item">
+        <h2 class="places__title">Зимний Байкал</h2>
+        <div class="places__link"><span>URL<br></span><a href="#">https://vk.com/baikalmile</a></div>
+        <img src="images/places/baikal.png" alt="" class="places__image">
+        <div class="places__text">
+          <p>Всем известен Байкал как крупнейшее озеро
+            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+          </p>
+          <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
+            когда лыжник привязывает себя
+            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+            «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+        </div>
       </div>
-    </div>
-  </section>
+      <div class="places__item">
+        <h2 class="places__title">Карелия</h2>
+        <div class="places__link"><span>URL<br></span><a href="#">http://vodlozero.ru/</a></div>
+        <img src="images/places/karelia.png" alt="" class="places__image">
+        <div class="places__text">
+          <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+            Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
+            болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+            существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотю километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
