--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <h2 class="places__title">Куршская коса</h2>
         <div class="places__link"><span>URL<br></span><a href="#">park-kosa.ru</a></div>
         <img class="places__image" src="images/places/kosa.png" alt="">
-        <div class="places__text">
-          <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+        <div class="places__description">
+          <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского
             залива
             с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
             российского анклава.</p>
-          <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя
+          <p class="places__text">На этом Калининградская область не заканчивается. Для путешественника и исследователя
             там же по
             соседству
             —
@@ -101,10 +101,12 @@
         <h2 class="places__title">Кольский</h2>
         <div class="places__link"><span>URL<br></span><a href="#">National Geographic</a></div>
         <img src="images/places/kolsky.png" alt="" class="places__image">
-        <div class="places__text">
-          <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
+        <div class="places__description">
+          <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг
+            —
             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+          <p class="places__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово
             «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
             пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
             увидеть северное сияние начинает сбываться с билетом
@@ -115,12 +117,13 @@
         <h2 class="places__title">Алтай</h2>
         <div class="places__link"><span>URL<br></span><a href="#">Facebook</a></div>
         <img src="images/places/altai.png" alt="" class="places__image">
-        <div class="places__text">
-          <p>Алтай — одно из красивейших мест в России.
+        <div class="places__description">
+          <p class="places__text">Алтай — одно из красивейших мест в России.
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
             озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
             воздухом.</p>
-          <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+          <p class="places__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+            разнообразие местной
             флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
             знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
@@ -129,11 +132,12 @@
         <h2 class="places__title">Зимний Байкал</h2>
         <div class="places__link"><span>URL<br></span><a href="#">https://vk.com/baikalmile</a></div>
         <img src="images/places/baikal.png" alt="" class="places__image">
-        <div class="places__text">
-          <p>Всем известен Байкал как крупнейшее озеро
+        <div class="places__description">
+          <p class="places__text">Всем известен Байкал как крупнейшее озеро
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
           </p>
-          <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта,
+          <p class="places__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+            Это такой вид спорта,
             когда лыжник привязывает себя
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
             «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -143,8 +147,9 @@
         <h2 class="places__title">Карелия</h2>
         <div class="places__link"><span>URL<br></span><a href="#">http://vodlozero.ru/</a></div>
         <img src="images/places/karelia.png" alt="" class="places__image">
-        <div class="places__text">
-          <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+        <div class="places__description">
+          <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
+            не растёт западнее
             Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
             болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
             существу, видевшему солнце раньше, чем увидал его Иван Грозный.
