Блок cover завершен

--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
         </div>
       </div>
     </section>
+    <section class="cover">
+      <img class="cover__background" src="images/cover/__background.png" alt="">
+      <div class="text">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.
+        </p>
+      </div>
+    </section>
   </main>
 </body>
 
