Добавлена файловая структура для footer

--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="footer__links">
+      <a href="#" class="footer__link"></a>
+      <a href="#" class="footer__link"></a>
+      <a href="#" class="footer__link"></a>
+      <a href="#" class="footer__link"></a>
+      <a href="#" class="footer__link"></a>
+    </div>
+    <div class="footer__copyright"></div>
+  </footer>
 </body>
 
 </html>
