Блок footer завершен

--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__links">
-      <a href="#" class="footer__link"></a>
-      <a href="#" class="footer__link"></a>
-      <a href="#" class="footer__link"></a>
-      <a href="#" class="footer__link"></a>
-      <a href="#" class="footer__link"></a>
-    </div>
-    <div class="footer__copyright"></div>
+    <ul class="footer__links">
+      <li><a href="#" class="footer__link">Карты</a></li>
+      <li><a href="#" class="footer__link">Погода</a></li>
+      <li><a href="#" class="footer__link">Расписание</a></li>
+      <li><a href="#" class="footer__link">Календарь</a></li>
+      <li><a href="#" class="footer__link">Путешествия</a></li>
+    </ul>
+    <div class="footer__copyright">&copy;2020. Даниил Бушковский</div>
   </footer>
 </body>
 
