--- a/index.html
+++ b/index.html
@@ -56,49 +56,50 @@
         <img src="images/lead/Ellipse.png" alt="" class="lead__point lead__point_place_pskov">
         <img src="images/lead/Ellipse (Stroke).png" alt="" class="lead__point lead__point_place_pskov">
         <img src="images/lead/псков.png" class="lead__locality lead__locality_place_pskov" alt="">
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_novgorod" src="images/lead/великий новгород.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_tver" src="images/lead/ТВЕРЬ.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_yaroslavl" src="images/lead/ЯРОСЛАВЛЬ.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_manturovo" src="images/lead/МАНТУРОВО.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_kotelnich" src="images/lead/КОТЕЛЬНИЧ-1.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_glazov" src="images/lead/ГЛАЗОВ.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_perm" src="images/lead/ПЕРМЬ.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_tumen" src="images/lead/тюмень.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_omsk" src="images/lead/омск.png" alt="">
 
-        <img class="lead__point lead__point_place_" src="" alt="">
-        <img class="lead__point lead__point_place" src="" alt="">
-        <img class="lead__locality lead__locality_place_" src="" alt="">
+        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_krasnoyarsk" src="images/lead/красноярск.png" alt="">
+
+        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse.png" alt="">
+        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_ulanude" src="images/lead/улан-удэ.png" alt="">
       </div>
     </section>
     <section class="intro">
