Блок lead завершен

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse.png" alt="">
         <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse (Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_ulanude" src="images/lead/улан-удэ.png" alt="">
+        <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
       </div>
     </section>
     <section class="intro">
