--- a/index.html
+++ b/index.html
@@ -54,53 +54,42 @@
             fill="white" />
         </svg>
         <img src="images/lead/Ellipse.png" alt="" class="lead__point lead__point_place_pskov">
-        <img src="images/lead/Ellipse (Stroke).png" alt="" class="lead__point lead__point_place_pskov">
+        <img src="images/lead/Ellipse(Stroke).png" alt="" class="lead__point lead__point_place_pskov">
         <img src="images/lead/псков.png" class="lead__locality lead__locality_place_pskov" alt="">
-
         <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse (Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_novgorod" src="images/lead/великий новгород.png" alt="">
-
+        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse(Stroke).png" alt="">
+        <img class="lead__locality lead__locality_place_novgorod" src="images/lead/великийновгород.png" alt="">
         <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_tver" src="images/lead/ТВЕРЬ.png" alt="">
-
         <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_yaroslavl" src="images/lead/ЯРОСЛАВЛЬ.png" alt="">
-
         <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_manturovo" src="images/lead/МАНТУРОВО.png" alt="">
-
         <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_kotelnich" src="images/lead/КОТЕЛЬНИЧ-1.png" alt="">
-
         <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_glazov" src="images/lead/ГЛАЗОВ.png" alt="">
-
         <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_perm" src="images/lead/ПЕРМЬ.png" alt="">
-
         <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_tumen" src="images/lead/тюмень.png" alt="">
-
         <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_omsk" src="images/lead/омск.png" alt="">
-
         <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_krasnoyarsk" src="images/lead/красноярск.png" alt="">
-
         <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse (Stroke).png" alt="">
+        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse(Stroke).png" alt="">
         <img class="lead__locality lead__locality_place_ulanude" src="images/lead/улан-удэ.png" alt="">
-        <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
+        <p class="lead__caption">Ваша полка - верхняя</p>
       </div>
     </section>
     <section class="intro">
