--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="lead__image">
         <img src="images/lead/kalegin-michail-179870-unsplash.png" alt="Спящий человек в купе поезда"
           class="lead__background">
-        <img src="images/lead/Vector 2.8 (Stroke).svg" alt="Маршрут" class="lead__route">
+        <img src="images/lead/Vector(Stroke).svg" alt="Маршрут" class="lead__route">
         <img src="images/lead/Ellipse.png" alt="" class="lead__point lead__point_place_pskov">
         <img src="images/lead/Ellipse(Stroke).png" alt="" class="lead__point lead__point_place_pskov">
         <img src="images/lead/псков.png" class="lead__locality lead__locality_place_pskov" alt="Псков">
