--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
     <section class="places">
       <div class="places__item">
         <h2 class="places__title">Куршская коса</h2>
-        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
-            href="http://park-kosa.ru">park-kosa.ru</a>
-        </div>
+        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
+            href="http://park-kosa.ru">park-kosa.ru</a></div>
         <img class="places__image" src="images/places/kosa.png" alt="Море">
         <div class="places__description">
           <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
@@ -123,7 +122,7 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Кольский</h2>
-        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
             href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></div>
         <img src="images/places/kolsky.png" alt="Снежные горы" class="places__image">
         <div class="places__description">
@@ -140,7 +139,7 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Алтай</h2>
-        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
             href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></div>
         <img src="images/places/altai.png" alt="Лес" class="places__image">
         <div class="places__description">
@@ -156,7 +155,7 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Зимний Байкал</h2>
-        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
             href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <img src="images/places/baikal.png" alt="Замерзшая вода" class="places__image">
@@ -173,7 +172,7 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Карелия</h2>
-        <div class="places__link"><span>URL<br></span><a target="_blank" class="hover-link"
+        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
             href="http://vodlozero.ru">http://vodlozero.ru/</a></div>
         <img src="images/places/karelia.png" alt="Река" class="places__image">
         <div class="places__description">
