Исправлен блок lead

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body class="page">
   <header class="header">
     <img src="images/logo/__logo.svg" alt="Лого с надписью Россия" class="header__logo">
-    <div class="header__lang-links">
-      <a href="#" class="header__lang-link header__lang-link_enabled hover-link">Ru</a>
-      <a href="#" class="header__lang-link hover-link">En</a>
-    </div>
+    <ul class="header__lang-links">
+      <li class="header__list-item"><a href="#" class="header__lang-link header__lang-link_enabled hover-link">Ru</a>
+      </li>
+      <li class="header__list-item"><a href="#" class="header__lang-link hover-link">En</a></li>
+    </ul>
   </header>
   <main>
     <section class="lead">
@@ -22,49 +23,8 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
       </div>
-      <div class="lead__image">
-        <img src="images/lead/kalegin-michail-179870-unsplash.png" alt="Спящий человек в купе поезда"
-          class="lead__background">
-        <img src="images/lead/Vector(Stroke).svg" alt="Маршрут" class="lead__route">
-        <img src="images/lead/Ellipse.png" alt="" class="lead__point lead__point_place_pskov">
-        <img src="images/lead/Ellipse(Stroke).png" alt="" class="lead__point lead__point_place_pskov">
-        <img src="images/lead/псков.png" class="lead__locality lead__locality_place_pskov" alt="Псков">
-        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_novgorod" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_novgorod" src="images/lead/великийновгород.png"
-          alt="Великий Новгород">
-        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_tver" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_tver" src="images/lead/ТВЕРЬ.png" alt="Тверь">
-        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_yaroslavl" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_yaroslavl" src="images/lead/ЯРОСЛАВЛЬ.png" alt="Ярославль">
-        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_manturovo" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_manturovo" src="images/lead/МАНТУРОВО.png" alt="Мантурово">
-        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_kotelnich" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_kotelnich" src="images/lead/КОТЕЛЬНИЧ-1.png" alt="Котельнич-1">
-        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_glazov" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_glazov" src="images/lead/ГЛАЗОВ.png" alt="Глазов">
-        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_perm" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_perm" src="images/lead/ПЕРМЬ.png" alt="Пермь">
-        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_tumen" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_tumen" src="images/lead/тюмень.png" alt="Тюмень">
-        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_omsk" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_omsk" src="images/lead/омск.png" alt="Омск">
-        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_krasnoyarsk" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_krasnoyarsk" src="images/lead/красноярск.png" alt="Красноярск">
-        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse.png" alt="">
-        <img class="lead__point lead__point_place_ulanude" src="images/lead/Ellipse(Stroke).png" alt="">
-        <img class="lead__locality lead__locality_place_ulanude" src="images/lead/улан-удэ.png" alt="Улан=Удэ">
-        <p class="lead__caption">Ваша полка - верхняя</p>
-      </div>
+      <img src="images/lead/image1280.png" alt="Спящий человек в купе поезда" class="lead__image">
+      <p class="lead__caption">Ваша полка - верхняя</з>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
