--- a/index.html
+++ b/index.html
@@ -35,35 +35,33 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li class="intro__list-item"><span>Часовых поясов</span> 11</li>
-        <li class="intro__list-item"><span>Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li class="intro__list-item"><span>Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li class="intro__list-item"><span>Природных заповедников</span> 105</li>
-        <li class="intro__list-item"><span>Аэропортов</span> 241
+        <li class="intro__list-item"><span class="intro__list-text">Часовых поясов</span> 11</li>
+        <li class="intro__list-item"><span class="intro__list-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list-item"><span class="intro__list-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list-item"><span class="intro__list-text">Природных заповедников</span> 105</li>
+        <li class="intro__list-item"><span class="intro__list-text">Аэропортов</span> 241
         </li>
       </ul>
     </section>
     <section class="gallery">
-      <div class="gallery__grid-container">
-        <img src="images/gallery/__item1.png" alt="Вид из окна" class="gallery__item">
-        <img src="images/gallery/__item2.png" alt="Горы и облака" class="gallery__item">
-        <img src="images/gallery/__item3.png" alt="Собака на стоге сена" class="gallery__item">
-        <img src="images/gallery/__item4.png" alt="Лес в тумане" class="gallery__item">
-        <img src="images/gallery/__item5.png" alt="Машина на льду" class="gallery__item">
-        <img src="images/gallery/__item6.png" alt="Пляж" class="gallery__item">
-        <img src="images/gallery/__item7.png" alt="Снежные горы" class="gallery__item">
-        <img src="images/gallery/__item8.png" alt="Знак пешеходного перехода" class="gallery__item">
-        <img src="images/gallery/__item9.png" alt="Горы" class="gallery__item">
-        <img src="images/gallery/__item10.png" alt="Гора" class="gallery__item">
-        <img src="images/gallery/__item11.png" alt="Скалы" class="gallery__item">
-        <img src="images/gallery/__item12.png" alt="Горы" class="gallery__item">
-      </div>
+      <img src="images/gallery/__item1.png" alt="Вид из окна" class="gallery__item">
+      <img src="images/gallery/__item2.png" alt="Горы и облака" class="gallery__item">
+      <img src="images/gallery/__item3.png" alt="Собака на стоге сена" class="gallery__item">
+      <img src="images/gallery/__item4.png" alt="Лес в тумане" class="gallery__item">
+      <img src="images/gallery/__item5.png" alt="Машина на льду" class="gallery__item">
+      <img src="images/gallery/__item6.png" alt="Пляж" class="gallery__item">
+      <img src="images/gallery/__item7.png" alt="Снежные горы" class="gallery__item">
+      <img src="images/gallery/__item8.png" alt="Знак пешеходного перехода" class="gallery__item">
+      <img src="images/gallery/__item9.png" alt="Горы" class="gallery__item">
+      <img src="images/gallery/__item10.png" alt="Гора" class="gallery__item">
+      <img src="images/gallery/__item11.png" alt="Скалы" class="gallery__item">
+      <img src="images/gallery/__item12.png" alt="Горы" class="gallery__item">
     </section>
     <section class="places">
       <div class="places__item">
         <h2 class="places__title">Куршская коса</h2>
-        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
-            href="http://park-kosa.ru">park-kosa.ru</a></div>
+        <div class="places__link"><span class="places__link-caption">URL</span><a target="_blank"
+            class="places__link-address hover-link" href="http://park-kosa.ru">park-kosa.ru</a></div>
         <img class="places__image" src="images/places/kosa.png" alt="Море">
         <div class="places__description">
           <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
@@ -82,7 +80,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Кольский</h2>
-        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
+        <div class="places__link"><span class="places__link-caption">URL</span><a target="_blank"
+            class="places__link-address hover-link"
             href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a></div>
         <img src="images/places/kolsky.png" alt="Снежные горы" class="places__image">
         <div class="places__description">
@@ -99,7 +98,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Алтай</h2>
-        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
+        <div class="places__link"><span class="places__link-caption">URL</span><a target="_blank"
+            class="places__link-address hover-link"
             href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a></div>
         <img src="images/places/altai.png" alt="Лес" class="places__image">
         <div class="places__description">
@@ -115,8 +115,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Зимний Байкал</h2>
-        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
-            href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+        <div class="places__link"><span class="places__link-caption">URL</span><a target="_blank"
+            class="places__link-address hover-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <img src="images/places/baikal.png" alt="Замерзшая вода" class="places__image">
         <div class="places__description">
@@ -132,8 +132,8 @@
       </div>
       <div class="places__item">
         <h2 class="places__title">Карелия</h2>
-        <div class="places__link"><span>URL</span><a target="_blank" class="hover-link"
-            href="http://vodlozero.ru">http://vodlozero.ru/</a></div>
+        <div class="places__link"><span class="places__link-caption">URL</span><a target="_blank"
+            class="places__link-address hover-link" href="http://vodlozero.ru">http://vodlozero.ru/</a></div>
         <img src="images/places/karelia.png" alt="Река" class="places__image">
         <div class="places__description">
           <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница
@@ -158,14 +158,16 @@
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__links">
-      <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link hover-link">Карты</a></li>
-      <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link hover-link">Погода</a></li>
-      <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link hover-link">Расписание</a></li>
-      <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link hover-link">Календарь</a></li>
-      <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link hover-link">Путешествия</a></li>
-    </ul>
-    <div class="footer__copyright">&copy;2022. Даниил Бушковский</div>
+    <nav class="footer__links">
+      <ul class="footer__list">
+        <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link hover-link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link hover-link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link hover-link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link hover-link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link hover-link">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy;2022. Даниил Бушковский</p>
   </footer>
 </body>
 
