--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
       </ul>
     </section>
     <section class="gallery">
-      <img src="images/gallery/__item1.png" alt="Вид из окна" class="gallery__item">
-      <img src="images/gallery/__item2.png" alt="Горы и облака" class="gallery__item">
-      <img src="images/gallery/__item3.png" alt="Собака на стоге сена" class="gallery__item">
-      <img src="images/gallery/__item4.png" alt="Лес в тумане" class="gallery__item">
-      <img src="images/gallery/__item5.png" alt="Машина на льду" class="gallery__item">
-      <img src="images/gallery/__item6.png" alt="Пляж" class="gallery__item">
-      <img src="images/gallery/__item7.png" alt="Снежные горы" class="gallery__item">
-      <img src="images/gallery/__item8.png" alt="Знак пешеходного перехода" class="gallery__item">
-      <img src="images/gallery/__item9.png" alt="Горы" class="gallery__item">
-      <img src="images/gallery/__item10.png" alt="Гора" class="gallery__item">
-      <img src="images/gallery/__item11.png" alt="Скалы" class="gallery__item">
-      <img src="images/gallery/__item12.png" alt="Горы" class="gallery__item">
+      <div class="gallery__grid-container">
+        <img src="images/gallery/__item1.png" alt="Вид из окна" class="gallery__item">
+        <img src="images/gallery/__item2.png" alt="Горы и облака" class="gallery__item">
+        <img src="images/gallery/__item3.png" alt="Собака на стоге сена" class="gallery__item">
+        <img src="images/gallery/__item4.png" alt="Лес в тумане" class="gallery__item">
+        <img src="images/gallery/__item5.png" alt="Машина на льду" class="gallery__item">
+        <img src="images/gallery/__item6.png" alt="Пляж" class="gallery__item">
+        <img src="images/gallery/__item7.png" alt="Снежные горы" class="gallery__item">
+        <img src="images/gallery/__item8.png" alt="Знак пешеходного перехода" class="gallery__item">
+        <img src="images/gallery/__item9.png" alt="Горы" class="gallery__item">
+        <img src="images/gallery/__item10.png" alt="Гора" class="gallery__item">
+        <img src="images/gallery/__item11.png" alt="Скалы" class="gallery__item">
+        <img src="images/gallery/__item12.png" alt="Горы" class="gallery__item">
+      </div>
     </section>
     <section class="places">
       <div class="places__item">
