--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
       </div>
       <img src="images/lead/image1280.png" alt="Спящий человек в купе поезда" class="lead__image">
-      <p class="lead__caption">Ваша полка - верхняя</з>
+      <p class="lead__caption">Ваша полка - верхняя</p>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
