--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
       </div>
-      <img src="images/lead/image1280.png" alt="Спящий человек в купе поезда" class="lead__image">
+      <img src="images/lead/__image.png" alt="Спящий человек в купе поезда" class="lead__image">
       <p class="lead__caption">Ваша полка - верхняя</p>
     </section>
     <section class="intro">
